# ctools

./: .gitignore  .pylintrc  CTools.py  CTools1.0.py  EmittingStream.py  GITHUB_ACTIONS_SETUP.md  GUI.py  Jenkinsfile  LICENSE  README.md  add_mapping.py  add_members.py  build.bat  cf_report.py  cli-testing.py  cloud_folders.py  cloudfs.py  cloudfs_new.py  command_line.py  copynfs.py  copyshares.py  ctera-zones-report 1.py  ctools.py  ctools.spec  dbsize.py  delete_shares_with_name.py  filer.py  filer_cert_import.py  importshares.py  info-log.txt  installed_packages.txt  log-testing.py  log_setter.py  login.py  menu.py  mytools.py  output.tmp  populate.py  populate_test.py  pyproject.toml  (+25 more)
.claude/: settings.local.json
Worm migration scripts/: README.md  main.py
cli_helpers/: add_mapping_cli.py  copy_shares_cli.py  disable_ssh_cli.py  enable_ssh_cli.py  enable_telnet_cli.py  populate_shares_cli.py  report_zones_cli.py  reset_password_cli.py  run_cmd_cli.py  shares_report_cli.py  show_status_cli.py  suspend_sync_cli.py  unsuspend_sync_cli.py  worm_settings_cli.py
output/: output.tmp
templates/: cloud_fs.csv  create_shares.csv
windows/: AddMappingWindow.py  AddMembersWindow.py  CloudFoldersWindow.py  DeleteSharesWindow.py  DisableSSHWindow.py  EnableSSHWindow.py  EnableTelnetWindow.py  ImportCertificateWindow.py  ImportSharesWindow.py  PopulateCloudFoldersWindow.py  ReportZonesWindow.py  ResetPasswordWindow.py  RunCmdWindow.py  SMBAuditWindow.py  ShareAuditWindow.py  SharesFromCsvWindow.py  SharesReportWindow.py  ShowStatusWindow.py  SuspendSyncWindow.py  (+3 more)
(+59 files in other folders)
